frontend/css/styles.css
/* ... */
.cta-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 235px;
    height: 72px;
    background: #9FADBE;
    border-radius: 900px;
    position: relative;
    background-image: url('/frontend/images/hero/cta-btn-bg.svg');
    border: none;
    outline: none;
    cursor: pointer;
    transition:
    transform 0.25s ease,
    filter 0.25s ease,
    box-shadow 0.25s ease;
}

.cta-btn p {
    position: relative;
    right: 20px;
    font-weight: 600;
    font-size: 16px;
    leading-trim: both;
    text-edge: cap;
    text-align: center;
    text-transform: uppercase;
    color: #0B141F;
}

.cta-btn img {
    position: absolute;
    right: 5px;
    width: 59px;
    height: 59px;
    background: #DEE3EA;
    border-radius: 900px;
}

.cta-btn:hover {
  transform: scale(1.05);
  filter: brightness(1.15);
  box-shadow: 0 0 25px rgba(222, 235, 250, 0.7);
}

.sixth-left {
    width: 760px;
}

.sixth-left-main {
    width: 760px; /* This is the key missing piece */
    display: grid;
    place-items: center;
}

.sixth-left-main {
  display: grid;
  place-items: center;
}

.sixth-left-container {
  display: grid;
  place-content: center;
  position: relative;
  overflow: hidden;
  border-radius: 1rem;
  --position: 50%;
}

.experience-tag {
    position: absolute;
    z-index: 99;
    left: 10%;
    top: -31px;
}

.sixth-left-image-container {
  width: 760px;
  height: 509px;
  border-radius: 22px;
}

.slider-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: left;
}

.image-before {
  position: absolute;
  inset: 0;
  width: var(--position);
}

.slider {
  position: absolute;
  inset: 0;
  cursor: pointer;
  opacity: 0;
  /* for Firefox */
  width: 100%;
  height: 100%;
}

.slider:focus-visible ~ .slider-button {
  outline: 5px solid black;
  outline-offset: 3px;
}

.slider-line {
  position: absolute;
  inset: 0;
  width: .2rem;
  height: 100%;
  background-color: #00c5e7;
  /* z-index: 10; */
  left: var(--position);
  transform: translateX(-50%);
  pointer-events: none;
}

.slider-button {
  position: absolute;
  color: white;
  padding: .5rem;
  border-radius: 100vw;
  display: grid;
  place-items: center;
  top: 50%;
  left: var(--position);
  transform: translate(-50%, -50%);
  pointer-events: none;
  /* z-index: 100; */
}

.slider-button img {
    height: 150px;
    width:  150px;
}

@media (max-width:1320px) {
    .sixth-left-image-container {
        width: 680px;
        height: 430px;
    }

    .sixth-heading {
        font-size: 50px;
    }

    .sixth-description {
        font-size: 20px;
    }

    .sixth-container {
        gap: 1rem;
        width: 90%;
    }

    .sixth-left img {
        max-width: 680px;
    }

    .sixth-left-main {
        max-width: 680px;
    }

    .sixth-left {
        width: 680px;
    }

}


/* footer */

footer {
    padding-top: 5rem;
}

.footer-container {
    max-width: 1100px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    background-image: url('/images/footer/bg.svg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 30px;
    padding: 100px 0 100px 0;
}

.footer-top-img {
    max-width: 60%;
}

.footer-heading {
    font-family: 'Urbanist';
    font-style: normal;
    font-weight: 500;
    font-size: 60px;
    text-align: center;
    letter-spacing: -0.01em;
    text-transform: capitalize;
    background: linear-gradient(93.81deg, #FFFFFF 43.56%, #6C8FB9 88.31%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;
    width: 80%;
}

.footer-description {
    font-family: 'Urbanist';
    font-style: normal;
    font-size: 20px;
    leading-trim: both;
    text-edge: cap;
    text-align: center;
    color: #FFFFFF;
}


.footer-cta-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 346px;
    height: 72px;
    background: #9FADBE;
    border-radius: 900px;
    position: relative;
    background-image: url('/frontend/images/hero/footer-cta-btn-bg.svg');
    border: none;
    outline: none;
    cursor: pointer;
}

.footer-cta-btn p {
    position: relative;
    right: 20px;
    font-weight: 600;
    font-size: 16px;
    leading-trim: both;
    text-edge: cap;
    text-align: center;
    text-transform: uppercase;
    color: #0B141F;
}

.footer-cta-btn img {
    position: absolute;
    right: 5px;
    width: 59px;
    height: 59px;
    background: #DEE3EA;
    border-radius: 900px;
}

.footer-end {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3rem;
    margin: 2rem;
}

.footer-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.footer-last-description {
    font-family: 'Sora';
    font-style: normal;
    font-weight: 400;
    font-size: 19px;
    leading-trim: both;
    text-edge: cap;
    text-align: center;
    text-transform: capitalize;
    color: #0B141F;
}

.footer-highlight {
    font-weight: bold;
}

@media (max-width:1200px) {
    .footer-container {
        width: 85%;
    }

    .footer-heading {
        font-size: 50px;
        margin: 1rem auto
    }

    .footer-description {
        width: 80%;
    }

}

@media (max-width:1024px) {
    .footer-heading {
        font-size: 40px;
    }

    .footer-left-arrow , .footer-right-arrow {
        max-width: 150px;
    }

}
/* ... */

